# mcp_template_sample

./: .env.example  .gitignore  AGENTS.md  EMPLIFI_IMPLEMENTATION.md  Makefile  Makefile.another_project  OPTIMIZATION_SUMMARY.md  README.md  USE_AS_TEMPLATE.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: End-to-end tests for the FastMCP server (pytest).md  JSON-RPC examples.md  MCP Demo.md  Model Context Protocol (MCP) at a glance.md  emplifi_integration.md  exmplifi_listening_metrics.md  mcp_template.md
docs/emplifi/: emplifi_listening_post.md  sample_implementation.py
docs/fastmcp documentation/: Running Your FastMCP Server.md  client.md
examples/: agent_client.py  simple_client.py
notebooks/: emplifi_api_exploration.ipynb  emplifi_social_listening_queries.ipynb
scripts/: README.md  emplifi_example.py  run_server.py  validate_server.py
src/mcp_server/: __init__.py  config.py  models.py  monitoring.py  server.py  utils.py
src/mcp_server/core/: __init__.py  config.py  logging.py
src/mcp_server/tools/: __init__.py  data_tools.py  emplifi_tools.py  file_tools.py  time_tools.py
tests/: conftest.py  test_monitoring.py  test_server.py
tests/test_examples/: emplifi_integration_test.py  mcp_chat_agent.py  test_mcp_client.py  test_mcp_server.sh  test_simple_client.py
tests/test_tools/: __init__.py  test_data_tools.py  test_emplifi_tools.py  test_file_tools.py  test_time_tools.py
